--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: black;
+  background-color: #42b842;
+}
+
+.example {
+  opacity: 1;
+  transition: opacity .5s ease-in;
 }
