1. add water;  2. tweak tank stall move bug; 3. tweak eagle fired event

--- a/src/features/map/styles.css
+++ b/src/features/map/styles.css
@@ -8,6 +8,11 @@
   background-repeat: no-repeat;
 }
 
+.flag {
+  background-image: url('/tiles/flag.png');
+  background-repeat: no-repeat;
+}
+
 .rock {
   background-image: url('/tiles/rock.png');
   background-repeat: no-repeat;
@@ -25,6 +30,11 @@
 
 .shelter {
   background-image: url('/tiles/shelter.png');
+  background-repeat: no-repeat;
+}
+
+.water {
+  background-image: url('/tiles/water.png');
   background-repeat: no-repeat;
 }
 
