--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: #42b842;
-}
-
-.example {
-  opacity: 1;
-  transition: opacity .5s ease-in;
+  background-color: #616769e0;
 }
