--- a/src/features/map/styles.css
+++ b/src/features/map/styles.css
@@ -5,12 +5,10 @@
 
 .eagle {
   background-image: url('/tiles/eagle.png');
-  background-repeat: no-repeat;
 }
 
 .flag {
   background-image: url('/tiles/flag.png');
-  background-repeat: no-repeat;
 }
 
 .rock {
@@ -76,4 +74,20 @@
 .shelter-cube {
   background-image: url('/tiles/shelter-cube.png');
   background-repeat: no-repeat;
+}
+
+.left-top {
+  background-position: 0px 0px;
+}
+
+.right-top {
+  background-position: 20px 0px;
+}
+
+.left-bottom {
+  background-position: 0px 20px;
+}
+
+.right-bottom {
+  background-position: 20px 20px;
 }
