1. add portrait detect text; 2. add css detect

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,15 @@ body {
   font-family: sans-serif;
   background-color: #030846bd;
 }
+
+@media screen and (orientation:portrait) {
+  .screen-rotate-warning {
+    display: block;
+  }
+}
+
+@media screen and (orientation:landscape) {
+  .screen-rotate-warning {
+    display: none;
+  }
+}
